Restructure stuff to use an AppState struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,6 @@ target_link_libraries(glslls
     stdc++fs
     fmt::fmt-header-only
 )
+
+install(TARGETS glslls
+        RUNTIME DESTINATION bin)
