--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'true'
+    - name: Install dependencies
+      run: |
+        sudo apt install ninja-build
     - name: make
       run: |
         make
